--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "webpack --config webpack.spec.ts --progress --color && karma start",
-    "start": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src"
+    "start": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src",
+    "api" : "angularclass-server --api retain --port 3500"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "@angular/platform-browser": "^2.0.0",
     "@angular/platform-browser-dynamic": "^2.0.0",
     "@angular/router": "^3.0.0",
+    "@angularclass/api":"^1.2.0",
     "core-js": "^2.4.1",
     "lodash": "^4.16.1",
     "rxjs": "5.0.0-rc.4",
@@ -37,7 +39,7 @@
     "raw-loader": "^0.5.1",
     "to-string-loader": "^1.1.4",
     "ts-helpers": "^1.1.1",
-    "typescript": "^2.1.4",
+    "typescript": "^2.0.10",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   }
